# 3DCam

./: .gitignore  3dcam  3dcam.service  NOTES-RealSense.txt  README.md  TODO  cli-norm.py  cli-raw.py  install.sh  pyproject.toml  requirements.txt  server.py
modules/: blob.py  camera_RSD4xx.py  camera_TB360.py  detector.py  frame.py
sdk/: RealSense-install.sh
test/RealSense/: detect.py  pyrealsense2.cpython-311-arm-linux-gnueabihf.so.2.55.1  pyrealsense2.cpython-312-x86_64-linux-gnu.so.2.55
test/TerraBee/: README  display_depth_frame.py  webserver.js
www/: index.html  script.js  style.css
