[tool.poetry]
name = "3dcam"
version = "0.1.0"
description = ""
authors = ["maigre <thomas@37m.gr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask-socketio = "^5.5.1"
eventlet = "^0.39.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

